Use default max heap space value

--- a/afu_abbaustellen_pub/Jenkinsfile
+++ b/afu_abbaustellen_pub/Jenkinsfile
@@ -16,7 +16,7 @@ pipeline {
             steps {
                 git url: gretlJobRepoUrl, branch: "${params.BRANCH ?: 'master'}", changelog: false
                 dir(env.JOB_BASE_NAME) {
-                    sh "gretl -Dorg.gradle.jvmargs=-Xmx2G -PafuAbbaustellenAppXtfUrl=${params.afuAbbaustellenAppXtfUrl}"
+                    sh "gretl -PafuAbbaustellenAppXtfUrl=${params.afuAbbaustellenAppXtfUrl}"
                 }
             }
         }
