--- a/arp_npl_import/Jenkinsfile
+++ b/arp_npl_import/Jenkinsfile
@@ -34,7 +34,7 @@ pipeline {
                 git url: gretlJobRepoUrl, branch: "${params.BRANCH ?: 'master'}", changelog: false
                 dir(env.JOB_BASE_NAME) {
                     unstash name: 'uploadDir'
-                    sh "gretl -Dorg.gradle.jvmargs=-Xmx2G -Pili2pgDataset=$inputFile.ili2pgDataset"
+                    sh "gretl -Pili2pgDataset=$inputFile.ili2pgDataset"
                 }
             }
         }
