--- a/alw_fruchtfolgeflaechen/03_Uebersteuerung/build.gradle
+++ b/alw_fruchtfolgeflaechen/03_Uebersteuerung/build.gradle
@@ -43,6 +43,7 @@ task importUebersteuerung_uebersteuerung(type: Db2Db, dependsOn: importAbbaustel
 
 //HIER WERDEN DIE Übersteuerungsflächen ausgeschnitten und eingefügt. 
 
+//, dependsOn: importUebersteuerung_uebersteuerung
 task fff_mit_uebersteuerung(type: SqlExecutor, dependsOn: importUebersteuerung_uebersteuerung) {
     database = [dbUriProcessing, dbUserProcessing, dbPwdProcessing]
     sqlFiles = ['fff_mit_uebersteuerung.sql']
