--- a/alw_fruchtfolgeflaechen/04_Finish/build.gradle
+++ b/alw_fruchtfolgeflaechen/04_Finish/build.gradle
@@ -3,7 +3,7 @@ import ch.so.agi.gretl.api.*
 
 apply plugin: 'ch.so.agi.gretl'
 
-defaultTasks 'fff_to_edit_db_finish'
+defaultTasks 'fff_to_edit_db_finish', 'fff_statistik'
 
 //HIER werden den Flächen innerhalb des Gewässerraumes noch das Spezialattribut "Gewaesserraum" zugeordnet. 
 
@@ -19,13 +19,6 @@ task fff_komplett(type: SqlExecutor, dependsOn: fff_gewaesserraum) {
     sqlFiles = ['fff_komplett.sql']
 }
 
-//HIER wird das ganze noch nach Gemeinden verschnitten
-
-task fff_komplett_gemeinden(type: SqlExecutor, dependsOn: fff_komplett) {
-    database = [dbUriProcessing, dbUserProcessing, dbPwdProcessing]
-    sqlFiles = ['fff_komplett_gemeinden.sql']
-}
-
 //HIER werden die Geometrien gesäubert
 
 task fff_clean(type: SqlExecutor, dependsOn: fff_komplett) {
@@ -33,8 +26,17 @@ task fff_clean(type: SqlExecutor, dependsOn: fff_komplett) {
     sqlFiles = ['fff_clean.sql']
 }
 
-//HIER WERDEN DIE Berechneten Daten in die Edit-DB geschrieben
+//HIER wird die Statistik erstellt und in die (Edit-)DB geschrieben
 
+task fff_statistik(type: Db2Db, dependsOn: fff_clean){
+    sourceDb = [dbUriProcessing, dbUserProcessing, dbPwdProcessing]
+    targetDb = [dbUriEdit, dbUserEdit, dbPwdEdit]
+    transferSets = [
+            new TransferSet('fff_statistik.sql','alw_fruchtfolgeflaechen_v1.statistik', true)
+    ];        
+}
+
+//HIER WERDEN DIE Berechneten Daten in die Edit-DB geschrieben
 
 task fff_to_edit_db_finish(type: Db2Db, dependsOn: fff_clean){
     sourceDb = [dbUriProcessing, dbUserProcessing, dbPwdProcessing]
