--- a/awjf_wald_pub/build.gradle
+++ b/awjf_wald_pub/build.gradle
@@ -20,7 +20,7 @@ task transferAwjfSogis(type: Db2Db) {
     ];        
 }
 
-task transferAwjfEdit(type: Db2Db, dependsOn:'transferAwjfSogis) {
+task transferAwjfEdit(type: Db2Db, dependsOn:'transferAwjfSogis') {
     sourceDb = [dbUriEdit, dbUserEdit, dbPwdEdit]
     targetDb = [dbUriPub, dbUserPub, dbPwdPub]
     transferSets = [
@@ -31,5 +31,5 @@ task transferAwjfEdit(type: Db2Db, dependsOn:'transferAwjfSogis) {
 }
 
 task refreshSolr(type:Exec, dependsOn:'transferAwjfEdit') {
-	commandLine 'curl', '-i', '--max-time', '20', solrIndexupdaterBaseUrl + '/queue?ds=ch.so.awjf.schutzwaldausscheidung,ch.so.awjf.schutzwald_hauptgefahrenpotentiale,ch.so.awjf.bestandeskarte_wald_flaechen,ch.so.awjf.waldplan.waldeigentum,ch.so.awjf.waldplan.waldfunktion,ch.so.awjf.waldplan.waldplantyp'
+    commandLine 'curl', '-i', '--max-time', '20', solrIndexupdaterBaseUrl + '/queue?ds=ch.so.awjf.schutzwaldausscheidung,ch.so.awjf.schutzwald_hauptgefahrenpotentiale,ch.so.awjf.bestandeskarte_wald_flaechen,ch.so.awjf.waldplan.waldeigentum,ch.so.awjf.waldplan.waldfunktion,ch.so.awjf.waldplan.waldplantyp'
 }
