[arp_auswertung_nutzungsplanung_pub] next try with sqlParam

--- a/arp_auswertung_nutzungsplanung_pub/build.gradle
+++ b/arp_auswertung_nutzungsplanung_pub/build.gradle
@@ -24,7 +24,9 @@ task BauzonenstatistikStart() {
     finalizedBy "ZusammenfassungUndGINES"
 }
 
-BfsNrGemeinden.each { bfsNr ->
+BfsNrGemeinden.each {
+    def bfsNr = it
+
     task "BauzonenstatistikProcessing_$bfsNr"(type: SqlExecutor) {
         description = "Eigentliche Bauzonenstatitik"
         database = [dbUriPub, dbUserPub, dbPwdPub]
