[arp_auswertung_nutzungsplanung_pub] Try to fix sqlParam 3

--- a/arp_auswertung_nutzungsplanung_pub/build.gradle
+++ b/arp_auswertung_nutzungsplanung_pub/build.gradle
@@ -25,12 +25,12 @@ task BauzonenstatistikStart() {
 }
 
 BfsNrGemeinden.each {
-    def bfs_nr = it
+    def bfsNr = it
 
-    task "BauzonenstatistikProcessing_$bfs_nr"(type: SqlExecutor) {
+    task "BauzonenstatistikProcessing_$bfsNr"(type: SqlExecutor) {
         description = "Eigentliche Bauzonenstatitik"
         database = [dbUriPub, dbUserPub, dbPwdPub]
-        sqlParameters = [BZ_SchemaName:'arp_auswertung_nutzungsplanung_pub_v1',bfsNr:bfs_nr]
+        sqlParameters = [BZ_SchemaName:'arp_auswertung_nutzungsplanung_pub_v1',gem_bfs:bfsNr]
         sqlFiles = ['bauzonenstatistik_bebauungsstand_mit_zonen_ohne_lsgrenzen.sql','bauzonenstatistik_bebauungsstand_mit_zonen_und_lsgrenzen.sql','bauzonenstatistik_liegenschaft_nach_bebauungsstand.sql']
     }
 }
