[Bauzonenstatistik] Step by Step 1

--- a/arp_auswertung_nutzungsplanung_pub/build.gradle
+++ b/arp_auswertung_nutzungsplanung_pub/build.gradle
@@ -1,5 +1,5 @@
 description = """\n
-Bauzonenstatistik auf Basis von Daten der Nutzungsplanungs- und Amtlichen Vermessung
+Bauzonenstatistik auf Basis von Daten der Nutzungsplanungs- und Amtlichen Vermessung.
 
 Die Auswertung findet unbebaute Flächen innerhalb des Bauzonenperimeters.
 
