[Bauzonenstatistik] Step by Step 4

--- a/arp_auswertung_nutzungsplanung_pub/build.gradle
+++ b/arp_auswertung_nutzungsplanung_pub/build.gradle
@@ -21,6 +21,7 @@ task BauzonenstatistikStart() {
     dependsOn {
         tasks.findAll { task -> task.name.startsWith('BauzonenstatistikProcessing_') }
     }
+    finalizedBy "ZusammenfassungUndGINES"
 }
 
 BfsNrGemeinden.each { bfsNr ->
