--- a/afu_oekomorphologie_import/build.gradle
+++ b/afu_oekomorphologie_import/build.gradle
@@ -6,7 +6,7 @@ import de.undercouch.gradle.tasks.download.Download
 apply plugin: 'ch.so.agi.gretl'
 
 
-defaultTasks 'importAfuFliessgewaesserStaging'
+defaultTasks 'unzipData'
 
 // Download-Verzeichnis
 
