--- a/afu_oekomorphologie_import/build.gradle
+++ b/afu_oekomorphologie_import/build.gradle
@@ -40,6 +40,7 @@ task validateCsvFile(type: CsvValidator, dependsOn: 'unzipData') {
     firstLineIsHeader=true
     valueSeparator = ','
     encoding = 'UTF-8'
+    println file("upload/absturz.csv")
     dataFiles = [file("upload/absturz.csv")]
 }
 
