--- a/arp_npl_import/Jenkinsfile
+++ b/arp_npl_import/Jenkinsfile
@@ -32,9 +32,11 @@ pipeline {
         stage('Run GRETL-Job') {
             steps {
                 git url: gretlJobRepoUrl, branch: "${params.BRANCH ?: 'master'}", changelog: false
-                dir(env.JOB_BASE_NAME) {
-                    unstash name: 'uploadDir'
-                    sh "gretl -Pili2pgDataset=$inputFile.ili2pgDataset"
+                container('gretl') {
+                    dir(env.JOB_BASE_NAME) {
+                        unstash name: 'uploadDir'
+                        sh "gretl -Pili2pgDataset=$inputFile.ili2pgDataset"
+                    }
                 }
             }
         }
