[avt_oev_gueteklassen_import] Bugfix

--- a/avt_oev_gueteklassen_import/build.gradle
+++ b/avt_oev_gueteklassen_import/build.gradle
@@ -25,18 +25,20 @@ task unpackFiles() {
      }
 }
 
-task import_to_stage(type: Ili2pgReplace, dependsOn: unpackFiles){
+task import_to_stage(type: Ili2pgImport, dependsOn: unpackFiles){
      description = 'Import der ÖV-Güteklassen-Daten in das Staging-Schema der Edit-DB'
      database = [dbUriEdit, dbUserEdit, dbPwdEdit]
      dbschema = 'avt_oev_gueteklassen_staging_v1'
      models = 'SO_AVT_Oev_Gueteklassen_20220120'
      dataFile = 'upload/data.xtf'
+     deleteData = yes
 }
 
-task import_to_pub(type: Ili2pgReplace, dependsOn: unpackFiles){
+task import_to_pub(type: Ili2pgImport, dependsOn: unpackFiles){
      description = 'Import der ÖV-Güteklassen-Daten in die Publikations DB'
      database = [dbUriPub, dbUserPub, dbPwdPub]
      dbschema = 'avt_oev_gueteklassen_pub_v1'
      models = 'SO_AVT_Oev_Gueteklassen_20220120'
      dataFile = 'upload/data.xtf'
+     deleteData = yes
 }
