--- a/avt_oev_gueteklassen_import/build.gradle
+++ b/avt_oev_gueteklassen_import/build.gradle
@@ -31,7 +31,7 @@ task import_to_stage(type: Ili2pgImport, dependsOn: unpackFiles){
      dbschema = 'avt_oev_gueteklassen_staging_v1'
      models = 'SO_AVT_Oev_Gueteklassen_20220120'
      dataFile = 'upload/data.xtf'
-     deleteData = yes
+     deleteData = true
 }
 
 task import_to_pub(type: Ili2pgImport, dependsOn: unpackFiles){
@@ -40,5 +40,5 @@ task import_to_pub(type: Ili2pgImport, dependsOn: unpackFiles){
      dbschema = 'avt_oev_gueteklassen_pub_v1'
      models = 'SO_AVT_Oev_Gueteklassen_20220120'
      dataFile = 'upload/data.xtf'
-     deleteData = yes
+     deleteData = true
 }
