--- a/avt_oev_gueteklassen_import/build.gradle
+++ b/avt_oev_gueteklassen_import/build.gradle
@@ -8,37 +8,20 @@ import java.io.File
 
 defaultTasks ''
 
-def uploadFileName = 'uploadFile'
-def exportFileName = 'data.xtf'
-def pathToUploadFolder = 'upload'
-
-/*
-SEHR UNSCHÖN: Das gezipte xtf wird hochgeladen und heisst dann data.xtf obwohl es eigentlich ein .gz-file ist. Dann wird es entzipt und heisst dann data_neu.xtf. 
-Das sollte noch schöner gemacht werden! 
-*/
-
-task unpackFiles() {
-    doLast{
-        file('upload/data.xtf').withOutputStream { os ->
-        os << resources.gzip('upload/uploadFile').read()
-        }
-     }
-}
-
-task import_to_stage(type: Ili2pgImport, dependsOn: unpackFiles){
+task import_to_stage(type: Ili2pgImport){
      description = 'Import der ÖV-Güteklassen-Daten in das Staging-Schema der Edit-DB'
      database = [dbUriEdit, dbUserEdit, dbPwdEdit]
      dbschema = 'avt_oev_gueteklassen_staging_v1'
      models = 'SO_AVT_Oev_Gueteklassen_20220120'
-     dataFile = 'upload/data.xtf'
+     dataFile = 'upload/uploadFile'
      deleteData = true
 }
 
-task import_to_pub(type: Ili2pgImport, dependsOn: unpackFiles){
+task import_to_pub(type: Ili2pgImport){
      description = 'Import der ÖV-Güteklassen-Daten in die Publikations DB'
      database = [dbUriPub, dbUserPub, dbPwdPub]
      dbschema = 'avt_oev_gueteklassen_pub_v1'
      models = 'SO_AVT_Oev_Gueteklassen_20220120'
-     dataFile = 'upload/data.xtf'
+     dataFile = 'upload/uploadFile'
      deleteData = true
 }
