[avt_oev_gueteklassen_import] Bugfix

--- a/avt_oev_gueteklassen_import/build.gradle
+++ b/avt_oev_gueteklassen_import/build.gradle
@@ -8,12 +8,18 @@ import java.io.File
 
 defaultTasks ''
 
-task import_to_stage(type: Ili2pgImport){
+task rename(type: Copy) {
+    from 'upload'
+    into 'upload'
+    rename 'uploadFile','uploadfile.xtf'
+}
+
+task import_to_stage(type: Ili2pgImport, dependsOn: rename){
      description = 'Import der ÖV-Güteklassen-Daten in das Staging-Schema der Edit-DB'
      database = [dbUriEdit, dbUserEdit, dbPwdEdit]
      dbschema = 'avt_oev_gueteklassen_staging_v1'
      models = 'SO_AVT_Oev_Gueteklassen_20220120'
-     dataFile = 'upload/uploadFile'
+     dataFile = 'upload/uploadFile.xtf'
      deleteData = true
 }
 
@@ -22,6 +28,6 @@ task import_to_pub(type: Ili2pgImport){
      database = [dbUriPub, dbUserPub, dbPwdPub]
      dbschema = 'avt_oev_gueteklassen_pub_v1'
      models = 'SO_AVT_Oev_Gueteklassen_20220120'
-     dataFile = 'upload/uploadFile'
+     dataFile = 'upload/uploadFile.xtf'
      deleteData = true
 }
